# disagree-to-clarify

./: .gitignore  README.md  ablation_inspections.txt  ablation_results.txt  colab_detailed_results.csv  d2c_colab_eval.ipynb  disagreement_dynamics.csv  disagreement_heatmap_data.csv  disagreement_topology.csv  eval_log.txt  evaluation_audit.txt  manage_vllm.sh  nohup.out  notes_javier.txt  paper_evaluation_results.txt  pyproject.toml  requirements.txt  semantic_similarity_results.csv  variant_inspections.txt
adapters_rl/: README.md  adapter_config.json
d2c/: __init__.py  agents.py  baseline.py  data.py  dialogue.py  llm.py  pipeline.py  prompts.py  synthesizer.py
data/: ambigqa_100.jsonl  ambigqa_filtered.jsonl  ambigqa_sample.jsonl  clarifymt_bench.jsonl
eval/: __init__.py  analyze.py  judge.py  judge_prompts.py  metrics.py  run_eval.py
outputs/: baselines_parallel.jsonl  baselines_vanilla.jsonl  eval_100.jsonl  eval_filtered.jsonl  eval_results.jsonl
scripts/: build_test_sets.py  colab_detailed_eval.py  colab_robust_eval.py  comprehensive_smoke.py  compute_semantic_similarity.py  dataset_stats.py  disagreement_analysis.py  dpo_train_manual.py  eval.py  final_paper_eval.py  generate_topology_data.py  inspect_data.py  inspect_variants.py  plot_topology_scatter.py  prepare_dpo_dataset.py  prepare_filtered_sample.py  prepare_sample.py  prepare_sft_dataset.py  reproduce_training.sh  run_ablations.py  run_baselines.py  run_batch.py  run_clarifymt.py  run_comprehensive_eval.py  run_demo.py  run_eval.py  run_eval_ambigqa.py  run_eval_sft.py  run_eval_sft_cuda.py  (+8 more)
(+25 files in other folders)
